# fintern

./: .gitignore  PLAN.md  README.md  pyproject.toml
docs/: data-layer.md
examples/: basic_analysis.py
src/fintern/: __init__.py  company.py  utils.py
src/fintern/analysis/: __init__.py  historical.py  red_flags.py  scoring.py
src/fintern/data/: __init__.py  exceptions.py  fundamentals.py  instruments.py  market.py  models.py  periods.py  storage.py
src/fintern/data/providers/: __init__.py  alpha_vantage.py  base.py  eodhd.py  fmp.py  openfigi.py  registry.py  sec.py  yahoo.py
src/fintern/metrics/: __init__.py  _base.py  growth.py  profitability.py  returns.py  risk.py  valuation.py
tests/: test_company.py  test_data_providers.py  test_fundamentals.py  test_growth.py  test_historical.py  test_instruments.py  test_live_data_providers.py  test_market.py  test_periods.py  test_profitability.py  test_red_flags.py  test_returns.py  test_risk.py  test_scoring.py  test_utils.py  test_valuation.py
tests/fixtures/data/providers/: refresh_fixtures.py
tests/fixtures/data/providers/openfigi/: mapping_response.json
tests/fixtures/data/providers/sec/: company_tickers.json  companyfacts_aapl.json
tests/fixtures/data/providers/yahoo/: market.csv
